# stellar-smart-account

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: lint.yml  publish-npm.yml  release.yml  scout.yml  test.yml
contracts/contract-factory/: Cargo.toml  Makefile
contracts/contract-factory/src/: lib.rs  test.rs  test_constants.rs
contracts/crossmint-contract-factory/: Cargo.toml
contracts/crossmint-contract-factory/src/: lib.rs  test.rs
contracts/deny-list-policy/: Cargo.toml
contracts/deny-list-policy/src/: lib.rs
contracts/examples/plugin-policy-example-reverts/src/: lib.rs
contracts/examples/plugin-policy-example/src/: lib.rs
contracts/examples/withdraw-proxy/: Cargo.toml
contracts/examples/withdraw-proxy/src/: lib.rs  test.rs
contracts/fee-abstraction/: Cargo.toml
contracts/fee-abstraction/src/: fee_forwarder.rs  lib.rs
contracts/fee-abstraction/src/tests/: fee_forwarder_test.rs  mod.rs  test_utils.rs
contracts/initializable/: Cargo.toml
contracts/initializable/src/: lib.rs  test.rs
contracts/sac-token-policy/: Cargo.toml
contracts/sac-token-policy/src/: lib.rs
contracts/simple-test-contract/: Cargo.toml
contracts/simple-test-contract/src/: lib.rs
contracts/smart-account/: Cargo.toml  README.md
contracts/smart-account-interfaces/: Cargo.toml
contracts/smart-account-interfaces/src/: account.rs  error.rs  lib.rs  plugin.rs  policy.rs
contracts/smart-account-interfaces/src/auth/: types.rs
contracts/smart-account-interfaces/src/auth/policy/: interface.rs  mod.rs  permission_interface.rs
contracts/smart-account/src/: account.rs  config.rs  constants.rs  error.rs  events.rs  interface.rs  lib.rs  plugin.rs  test.rs  utils.rs  wallet.rs
contracts/smart-account/src/auth/: mod.rs  permissions.rs  plugins.rs  proof.rs  signer.rs
contracts/smart-account/src/auth/core/: authorization_service.rs  authorizer.rs  mod.rs
contracts/smart-account/src/auth/policies/: mod.rs
contracts/smart-account/src/auth/policy/: allow_list.rs  deny_list.rs  external.rs  external_auth.rs  interface.rs  mod.rs  permission.rs  time_based.rs  token_transfer.rs
contracts/smart-account/src/auth/providers/: mod.rs
contracts/smart-account/src/auth/signers/: ed25519.rs  mod.rs  multisig.rs  secp256r1.rs  webauthn.rs
contracts/smart-account/src/migration/: mod.rs  v1_to_v2.rs  v1_types.rs
contracts/smart-account/src/module/: account_module.rs  mod.rs
contracts/smart-account/src/tests/: admin_downgrade_test.rs  auth.rs  auth_test.rs  expiring_signer_test.rs  external_permission_test.rs  external_policy_test.rs  mod.rs  multisig_test.rs  plugin_revoke.rs  plugin_test.rs  policy_lifecycle_test.rs  policy_test.rs  policy_tests.rs  recovery_test.rs  secp256r1_signer_test.rs  signer_management.rs  signer_management_test.rs  test_utils.rs  token_transfer_policy_test.rs  upgrade_test.rs  webauthn_signer_test.rs  webauthn_utils.rs
contracts/smart-account/testdata/: smart_account_v2.wasm
contracts/smart-wallet/: Cargo.toml  README.md
contracts/smart-wallet/src/: auth.rs  error.rs  events.rs  initializable.rs  interface.rs  lib.rs  signer.rs  storage.rs  test.rs  test_auth.rs  test_constants.rs  test_utils.rs  wallet.rs
contracts/smart-wallet/src/auth/: mod.rs  permissions.rs  proof.rs  require_auth.rs  signature.rs  signer.rs  validation.rs
contracts/smart-wallet/src/auth/policy/: allow_list.rs  deny_list.rs  time_based.rs
contracts/smart-wallet/src/auth/signers/: ed25519.rs  mod.rs  multisig.rs  secp256k1.rs  secp256r1.rs
contracts/smart-wallet/src/tests/: auth.rs  gas_measurement.rs  integration.rs  mod.rs  multisig_tests.rs  policy_tests.rs  secp256k1_signer.rs  secp256r1_signer.rs  signer_management.rs  test_utils.rs  webauthn_utils.rs
contracts/storage/src/: lib.rs  test.rs
contracts/testing/hello-world/src/: lib.rs
contracts/upgradeable/: Cargo.toml
contracts/upgradeable/src/: lib.rs  test.rs
contracts/web-auth/: Cargo.toml
contracts/web-auth/src/: lib.rs
crates/smart-account-interfaces/src/: lib.rs
examples/: README.md  consts.ts  package-lock.json  package.json  pnpm-lock.yaml  sdk-integration-placeholder.ts  smart-account-operations.ts  smart-wallet-deployment.ts  smart-wallet-operations.ts  smart-wallet-upgrade.ts  transaction-signing-placeholder.ts  tsconfig.json  utils.ts
scripts/upgrade-wallet/: Cargo.toml
scripts/upgrade-wallet/src/: main.rs
security/: threat-model.md  v2-changes.md
testing-app/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
testing-app/src/app/: page.tsx
testing-app/src/app/api/create-wallet/: route.ts
testing-app/src/app/api/create-wallet-passkey/: route.ts
testing-app/src/app/api/deploy-sac-contract/: route.ts
testing-app/src/app/api/fund-smart-wallet-xlm/: route.ts
testing-app/src/app/api/fund-smart-wallet-xmusd/: route.ts
testing-app/src/app/api/fund-usdxm-treasury/: route.ts
testing-app/src/app/api/get-balances/: route.ts
testing-app/src/app/api/transfer-tokens-from-smart-wallet/: route.ts
testing-app/src/lib/: const.ts  sac.ts  txs.ts  wallets.ts
