[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.dependencies]
soroban-sdk = "22.0.0"
smart-wallet = { path = "contracts/smart-wallet" }
crossmint-contract-factory = { path = "contracts/crossmint-contract-factory" }
initializable = { path = "contracts/initializable" }
storage = { path = "contracts/storage" }


[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
