[package]
name = "fee-abstraction"
version = "0.0.0"
edition = "2021"
publish = false
license.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-fee-abstraction = "0.7.0"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
smart-account = { workspace = true }
smart-account-interfaces = { workspace = true }
hello-world = { workspace = true }
p256 = { version = "0.13", features = ["ecdsa"] }
