[package]
name = "smart-wallet"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
initializable = { workspace = true }
storage = { workspace = true }
upgradeable = { workspace = true }


[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
contract-factory = { workspace = true }
ed25519-dalek = { version = "1" }
stellar-strkey = { version = "0.0.13" }
rand = "0.7.3"
env_logger = "0.11.8"
log = "0.4.27"
