[package]
name = "web-auth"
version = "0.0.0"
edition = "2021"
publish = false
license.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-access = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag = "v0.6.0" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
