[package]
name = "upgrade-wallet"
version = "0.1.0"
edition = "2021"
publish = false
description = "CLI tool for upgrading a v1 Smart Account wallet to v2 via Stellar SDK"

[[bin]]
name = "upgrade-wallet"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
stellar-rpc-client = "25"
stellar-xdr = { version = "25", features = ["curr", "std", "serde", "base64"] }
stellar-strkey = "0.0.15"
ed25519-dalek = { version = "2", features = ["std"] }
sha2 = "0.10"
hex = "0.4"
